--- a/goober/index.html
+++ b/goober/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/discowd-nitro/media-files/main/media/misery.mp4">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Epsi1/sigma/main/goober/misery.mp4">
     
     <!-- Video Link -->
     <meta property="og:type" content="video.other">
-    <meta property="og:video:url" content="https://raw.githubusercontent.com/discowd-nitro/media-files/main/media/merrybith.mp4">
+    <meta property="og:video:url" content="https://raw.githubusercontent.com/Epsi1/sigma/main/goober/2019-02-06_Byaku Abyss_Expensive Belfast's Dance_316839792507547.mp4">
     
     <!-- Change video width and height to match gif -->
     <meta property="og:video:height" content="360">
