--- a/goober/index.html
+++ b/goober/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/Epsi1/sigma/main/goober/neco_augh_bonk.mov">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Epsi1/sigma/main/goober/Anime-belfast-(azur-lane)-azurlane-hentai-gif-5628025.gif">
     
     <!-- Video Link -->
     <meta property="og:type" content="video.other">
