--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/discowd-nitro/media-files/main/media/huh.gif">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Epsi1/sigma/main/goober/Anime-belfast-(azur-lane)-azurlane-hentai-gif-5628025.gif">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
