--- a/test1/index.html
+++ b/test1/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/Epsi1/sigma/main/goober/Anime-belfast-(azur-lane)-azurlane-hentai-gif-5628025.gif">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Epsi1/sigma/main/goober/2019-02-06_Byaku Abyss_Expensive Belfast's Dance_316839792507547.mp4">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
