--- a/shiroko-running-1/index.html
+++ b/shiroko-running-1/index.html
@@ -3,11 +3,11 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/Epsi1/sigma/main/goober/Anime-belfast-(azur-lane)-azurlane-hentai-gif-5628025.gif">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Epsi1/sigma/main/shiroko-running-1/shirokorunning.gif">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
-    <meta property="og:video:url" content="https://raw.githubusercontent.com/discowd-nitro/media-files/main/media/misery.mp4">
+    <meta property="og:video:url" content="https://raw.githubusercontent.com/discowd-nitro/media-files/main/shiroko-running-1/GAS GAS GAS meme (720p_30fps_H264-192kbit_AAC).mp4">
     <!-- If you want a seamless transition between your thumbnail size and video size, adjust these values to match your thumbnail resolution. -->
     <!-- However, it will be all wonky if your thumbnail is vertical and your video is horizontal. This works best with similar aspect ratios -->
     <meta property="og:video:height" content="202">
